dnl Welcome to the Sphinx-3 automated build system.
dnl try not to hurt yourself ;)

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(sphinx3,0.7)

CFLAGS=${CFLAGS:--g -O2 -Wall -ansi}
#CFLAGS=${CFLAGS:--g -O2 -Wall  -DDMALLOC}

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_C_BIGENDIAN
AC_HEADER_STDC

AC_C_CONST
AC_TYPE_SIZE_T
AC_CHECK_FUNCS(memmove bcopy)

AC_TYPE_SIGNAL


epdata=`ls -1 $srcdir/model/ep | egrep -v '(Makefile|CVS)'`
epdata=`echo $epdata`

hmmdata=`ls -1 $srcdir/model/hmm/hub4_cd_continuous_8gau_1s_c_d_dd | egrep -v '(Makefile|CVS)'`
hmmdata=`echo $hmmdata`

tidigitsdata=`(cd $srcdir/model/hmm/tidigits && find . -type f -print | egrep -v '(Makefile|CVS|\.svn)')`
tidigitsdata=`echo $tidigitsdata`

lmdata=`ls -1 $srcdir/model/lm/an4 | egrep -v '(Makefile|CVS)' | sed 's/\.in//g'`
lmdata=`echo $lmdata`

docdata=`ls -1 $srcdir/doc | egrep -v '(Makefile|CVS)'`
docdata=`echo $docdata`

AC_CANONICAL_HOST

dnl
dnl Get SphinxBase source from command line if given
dnl
AC_ARG_WITH(sphinxbase,
	AS_HELP_STRING([--with-sphinxbase=DIRECTORY],
			[look for SphinxBase source files in DIRECTORY]),
			sphinxbase=$withval)

dnl
dnl Get SphinxBase build directory from command line if given
dnl
AC_ARG_WITH(sphinxbase-build,
	AS_HELP_STRING([--with-sphinxbase-build=DIRECTORY],
			[look for SphinxBase object files in DIRECTORY]),
	sphinxbasebuild=$withval)

dnl
dnl Check for installed SphinxBase
dnl FIXME: How do we find the installed headers robustly?
dnl
AC_CHECK_HEADER(sphinxbase/sphinx_config.h,
CPPFLAGS="-I/usr/include/sphinxbase -I/usr/local/include/sphinxbase",[
if test x$sphinxbase = x; then
   # Look for sphinxbase in the parent directory
   for sb in ../sphinxbase*; do
       AC_MSG_CHECKING([for sphinxbase in $sb])
       if test -f "$sb/include/prim_type.h"; then
          sphinxbase="`pwd`/$sb"
	  AC_MSG_RESULT(yes)
       else
	  AC_MSG_RESULT(no)
       fi
   done
fi
])


dnl
dnl Now verify SphinxBase if defined
dnl Sadly, this doesn't work when cross-compiling (for some dumb reason...)
dnl
: ${sphinxbasebuild=$sphinxbase}
if test x$sphinxbase != x && test x$cross_compiling = xyes; then
   CPPFLAGS="-I$sphinxbase/include -I$sphinxbasebuild/include $CPPFLAGS"
   LDFLAGS="$LDFLAGS -L$sphinxbasebuild/src/libsphinxfe -L$sphinxbasebuild/src/libsphinxfeat \
		     -L$sphinxbasebuild/src/libsphinxutil -L$sphinxbasebuild/src/libsphinxad"
fi
if test x$sphinxbase != x && test x$cross_compiling != xyes; then
   AC_CHECK_FILE($sphinxbase/include/prim_type.h,CPPFLAGS="-I$sphinxbase/include $CPPFLAGS",
   AC_ERROR(
[SphinxBase headers not found in $sphinxbase.  Please use the
--with-sphinxbase option to `configure' to specify the location of
SphinxBase.  Run $0 --help for more information.]))
fi
if test x$sphinxbasebuild != x && test x$cross_compiling != xyes; then
   AC_CHECK_FILE($sphinxbasebuild/src/libsphinxutil/libsphinxutil.la,
[CPPFLAGS="-I$sphinxbasebuild/include $CPPFLAGS"
LDFLAGS="$LDFLAGS -L$sphinxbasebuild/src/libsphinxfe -L$sphinxbasebuild/src/libsphinxfeat \
		  -L$sphinxbasebuild/src/libsphinxutil -L$sphinxbasebuild/src/libsphinxad"],
		   AC_ERROR(
[SphinxBase libraries were not found in $sphinxbasebuild.
Use the --with-sphinxbase-build option to `configure' to specify
the build directory for SphinxBase.  Run $0 --help for more information.]))
fi

AC_PATH_PROG(PERL,perl)
AC_PATH_PROG(CSH,csh)
AC_SUBST(docdata)
AC_SUBST(epdata)
AC_SUBST(hmmdata)
AC_SUBST(lmdata)
AC_SUBST(tidigitsdata)
AC_SUBST(ad_files)
AC_SUBST(ad_libs)
AC_SUBST(ad_backend)
AC_SUBST(PERL)
AC_SUBST(CSH)

AM_PROG_LIBTOOL

AC_OUTPUT([
Makefile
src/Makefile
src/libs3decoder/Makefile
src/libs3decoder/libAPI/Makefile
src/libs3decoder/libam/Makefile
src/libs3decoder/libconfidence/Makefile
src/libs3decoder/libcommon/Makefile
src/libs3decoder/libdict/Makefile
src/libs3decoder/libep/Makefile
src/libs3decoder/liblm/Makefile
src/libs3decoder/libsearch/Makefile
src/libs3decoder/libcfg/Makefile
src/programs/Makefile
src/tests/Makefile
src/tests/performance/Makefile
src/tests/performance/an4/Makefile
src/tests/performance/hub4/Makefile
src/tests/performance/rm1/Makefile
src/tests/performance/wsj20k/Makefile
src/tests/performance/wsj5k/Makefile
src/tests/performance/tidigits/Makefile
src/tests/performance/ti46/Makefile
src/tests/performance/Communicator/Makefile
src/tests/performance/ICSI/Makefile
src/tests/performance/spoke3/Makefile
src/tests/programs/Makefile
src/tests/regression/Makefile
src/tests/regression/checkStyle.sh
src/tests/regression/test-livepretend.sh
src/tests/regression/test-livepretend-clm.sh
src/tests/regression/test-livepretend-mllr.sh
src/tests/regression/test-lm_convert.sh
src/tests/regression/test-align.sh
src/tests/regression/test-align-mllr.sh
src/tests/regression/test-allphone.sh
src/tests/regression/test-allphone-mllr.sh
src/tests/regression/test-astar.sh
src/tests/regression/test-astar-clm.sh
src/tests/regression/test-conf.sh
src/tests/regression/test-dag.sh
src/tests/regression/test-dag-clm.sh
src/tests/regression/test-decode_anytopo.sh
src/tests/regression/test-decode_anytopo-mllr.sh
src/tests/regression/test-decode_anytopo-2ndstage.sh
src/tests/regression/test-decode.sh
src/tests/regression/test-decode-simple.sh
src/tests/regression/test-decode-noncomp.sh
src/tests/regression/test-decode-lts.sh
src/tests/regression/test-decode-mode2.sh
src/tests/regression/test-decode-mode3.sh
src/tests/regression/test-decode-mode3-mulmpx.sh
src/tests/regression/test-decode-mode3-mpx.sh
src/tests/regression/test-decode-mode5.sh
src/tests/regression/test-decode-mode5-noncomp.sh
src/tests/regression/test-decode-mode1368.sh
src/tests/regression/test-decode-mode1369.sh
src/tests/regression/test-decode-s3cont.sh
src/tests/regression/test-decode-s2semi.sh
src/tests/regression/test-decode-clm.sh
src/tests/regression/test-decode-mllr.sh
src/tests/regression/test-decode-2ndstage.sh
src/tests/regression/test-lm_convert-and-decode.sh
src/tests/regression/test-dp.sh
src/tests/regression/test-ep.sh
src/tests/regression/test-gausubvq.sh
src/tests/unit_tests/Makefile
src/tests/unit_tests/test_logs3/Makefile
scripts/Makefile
scripts/sphinx3-simple
model/Makefile
model/ep/Makefile
model/hmm/Makefile
model/hmm/hub4_cd_continuous_8gau_1s_c_d_dd/Makefile
model/hmm/tidigits/Makefile
model/hmm/RM1_cd_semi/Makefile
model/lm/Makefile
model/lm/an4/Makefile
model/lm/an4/args.an4
model/lm/an4/args.an4.test
model/lm/an4/args.an4.test.cls
model/lm/an4/args.an4.test.mllr
model/lm/an4/an4.ug.cls.lmctl
include/Makefile
doc/Makefile])

chmod +x scripts/sphinx3-simple
chmod +x src/tests/regression/*.sh
