bin_PROGRAMS = Consensus Consensus_print

Consensus_SOURCES = Cluster.cc			\
	Clustering.cc				\
	common.cc				\
	Consensus.cc				\
	GetOpt.cc				\
	Lattice.cc				\
	LineSplitter.cc				\
	Prons.cc				\
	Similarities.cc

Consensus_print_SOURCES = Cluster.cc		\
	Clustering_print.cc			\
	common.cc				\
	Consensus_print.cc			\
	GetOpt.cc				\
	Lattice.cc				\
	LineSplitter.cc				\
	Prons.cc				\
	Similarities.cc

AM_CPPFLAGS = -I$(top_srcdir)/include
