EXTRA_DIST = \
	README

pkginclude_HEADERS = \
	CM_macros.h \
	ad.h \
	cdcn.h \
	cont_ad.h \
	dict.h \
	err.h \
	fbs.h \
	hash.h \
	list.h \
	lm_3g.h \
	lmclass.h \
	log.h \
	log_add.h \
	mulaw.h \
	new_fe.h \
	new_fe_sp.h \
	posixsock.h \
	posixwin32.h \
	s2params.h \
	s2types.h \
	sphinxp.h \
	win32sock.h
