EXTRA_DIST = \
	README \
	ad_conf.h.in

pkginclude_HEADERS = \
	CM_macros.h \
	ad.h \
	cdcn.h \
	ckd_alloc.h \
	cont_ad.h \
	dict.h \
	err.h \
	fbs.h \
	fe.h \
	glist.h \
	hash.h \
	list.h \
	lm_3g.h \
	lmclass.h \
	log.h \
	log_add.h \
	mulaw.h \
	posixsock.h \
	posixwin32.h \
	s2params.h \
	s2types.h \
	sphinxp.h \
	win32sock.h
