bin_SCRIPTS = \
	allphone-test.csh \
	attila-sphinx2.pl \
	batch.csh \
	poe-sphinx-server-demo \
	sphinx2-demo \
	sphinx2-simple \
	sphinx2-test \
        sphinx2-phone \
        stress2sphinx \
	sphinx2-align

EXTRA_DIST =  \
	allphone-test.csh.in \
	attila-sphinx2.pl.in \
	batch.csh.in \
	poe-sphinx-server-demo.in \
	sphinx2-demo.in \
	sphinx2-simple.in \
	sphinx2-test.in \
	sphinx2-phone.in \
	sphinx2-example.arg \
        stress2sphinx.in \
	sphinx2-align.in
