bin_SCRIPTS = \
	allphone-test.csh \
	batch.csh \
	sphinx2-demo \
	sphinx2-simple \
	sphinx2-test \
        sphinx2-phone \
        stress2sphinx \
	sphinx2-align

EXTRA_DIST =  \
	allphone-test.csh.in \
	batch.csh.in \
	sphinx2-demo.in \
	sphinx2-simple.in \
	sphinx2-test.in \
	sphinx2-phone.in \
	sphinx2-example.arg \
        stress2sphinx.in \
	sphinx2-align.in


