bin_SCRIPTS = \
	sphinx2-demo \
	sphinx2-simple \
	sphinx2-test \
        sphinx2-phone \
	sphinx2-align

EXTRA_DIST =  \
	allphone-test.csh.in \
	batch.csh.in \
	sphinx2-demo.in \
	sphinx2-simple.in \
	sphinx2-test.in \
	sphinx2-phone.in \
	sphinx2-example.arg \
        stress2sphinx.in \
	sphinx2-align.in \
	s2decode.pl \
	setup_sphinx2.pl \
	setup_tutorial.pl \
	slave.pl \
	sphinx2.cfg
