pkginclude_HEADERS = adaptor.h			\
    ad.h					\
    agc.h					\
    approx_cont_mgau.h				\
    ascr.h					\
    bio.h					\
    bitvec.h					\
    blkarray_list.h				\
    case.h					\
    cb2mllr_io.h				\
    ckd_alloc.h					\
    classifier.h				\
    classify.h					\
    cmd_ln.h					\
    cmdln_macro.h				\
    cmn.h					\
    cmn_prior.h					\
    confidence.h				\
    cont_ad.h					\
    cont_mgau.h					\
    corpus.h					\
    ctxt_table.h				\
    dag.h					\
    dict2pid.h					\
    dict.h					\
    encoding.h					\
    endptr.h					\
    err.h					\
    fast_algo_struct.h				\
    feat.h					\
    fe.h					\
    filename.h					\
    fillpen.h					\
    flat_fwd.h					\
    fsg.h					\
    fsg_history.h				\
    fsg_lextree.h				\
    fsg_psubtree.h				\
    fsg_search.h				\
    genrand.h					\
    glist.h					\
    gmm_wrap.h					\
    gs.h					\
    hash.h					\
    heap.h					\
    hmm.h					\
    hyp.h					\
    info.h					\
    interp.h					\
    kbcore.h					\
    kb.h					\
    kdtree.h					\
    lextree.h					\
    libutil.h					\
    linklist.h					\
    live_decode_API.h				\
    live_decode_args.h				\
    lmclass.h					\
    lm.h					\
    logs3.h					\
    lts.h					\
    mdef.h					\
    misc.h					\
    mllr.h					\
    ms_gauden.h					\
    ms_mgau.h					\
    ms_mllr.h					\
    ms_senone.h					\
    mulaw.h					\
    nextword.h					\
    pio.h					\
    prim_type.h					\
    profile.h					\
    s2_semi_mgau.h				\
    s3types.h					\
    search.h					\
    sort.h					\
    srch_debug.h				\
    srch_flat_fwd.h				\
    srch_fsg.h					\
    srch.h					\
    srch_output.h				\
    srch_time_switch_tree.h			\
    srch_word_switch_tree.h			\
    stat.h					\
    str2words.h					\
    subvq.h					\
    tmat.h					\
    unlimit.h					\
    utt.h					\
    vector.h					\
    vithist.h					\
    whmm.h					\
    wid.h					\
    word_fsg.h					\
    word_graph.h				\
    word_ugprob.h
