pkginclude_HEADERS =				\
	adaptor.h				\
	approx_cont_mgau.h			\
	ascr.h					\
	astar.h                                 \
	blkarray_list.h				\
	cb2mllr_io.h				\
	classifier.h				\
	classify.h				\
	cmdln_macro.h				\
	confidence.h				\
	cont_mgau.h				\
	corpus.h				\
	ctxt_table.h				\
	dag.h					\
	dict2pid.h				\
	dict.h					\
	encoding.h				\
	endptr.h				\
	fast_algo_struct.h			\
	fillpen.h				\
	fsg.h					\
	fsg_history.h				\
	fsg_lextree.h				\
	fsg_psubtree.h				\
	fsg_search.h				\
	gmm_wrap.h				\
	gs.h					\
	hmm.h					\
	interp.h				\
	kbcore.h				\
	kb.h					\
	kdtree.h				\
	lextree.h				\
	lmclass.h				\
	lm.h					\
	logs3.h					\
	lts.h					\
	mdef.h					\
	misc.h					\
	mllr.h					\
	ms_gauden.h				\
	ms_mgau.h				\
	ms_mllr.h				\
	ms_senone.h				\
	s2_semi_mgau.h				\
	s3_arraylist.h				\
	s3_cfg.h				\
	s3_decode.h				\
	s3_endpointer.h				\
	s3types.h				\
	search.h				\
	sort.h					\
	sphinx3_export.h					\
	srch_allphone.h				\
	srch_debug.h				\
	srch_do_nothing.h			\
	srch_flat_fwd.h				\
	srch_fsg.h				\
	srch.h					\
	srch_output.h				\
	srch_time_switch_tree.h			\
	srch_word_switch_tree.h			\
	stat.h					\
	subvq.h					\
	tmat.h					\
	utt.h					\
	vector.h				\
	vithist.h				\
	whmm.h					\
	wid.h					\
	word_fsg.h				\
	word_graph.h				\
	word_ugprob.h
