LIVEDECSRCS = parse_args_file.c \
		fe_dump.c \
		feat_dump.c \
		fe_sigproc_dump.c \
		live_dump.c \
		metrics.c

LIVEDECOBJS = $(LIVEDECSRCS:.c=.o) 

SUBDIRS = an4

noinst_PROGRAMS = dumpfrontend \
		batchmetrics \
		lm_test \
		lm_utt_test

dumpfrontend_SOURCES = dump_frontend.c \
			${LIVEDECSRCS}


batchmetrics_SOURCES = batch_metrics.c \
			${LIVEDECSRCS}

lm_test_SOURCES = lm_test.c \
			${LIVEDECSRCS}

lm_utt_test_SOURCES = lm_utt_test.c \
			${LIVEDECSRCS}


INCLUDES = -I$(top_srcdir) \
	-I$(top_srcdir)/src \
	-I$(top_srcdir)/src/libs3decoder \
       -I$(top_srcdir)/src/libs3audio \
       -I$(top_builddir)/include


LDADD = $(top_builddir)/src/libs3decoder/libs3decoder.la \
	$(top_builddir)/src/libs3audio/libs3audio.la \
	$(top_builddir)/src/libutil/libutil.la \
	-lm @ad_libs@ 


CLEANFILES = gmake-ti46.results \
		gmake-ti46-quick.results \
		gmake-tidigits.results \
		gmake-tidigits-quick.results

ti46:
	rm -f gmake-ti46.results
	./batchmetrics ./ti46.ctl /lab/speech/sphinx4/data/ti46/ti20/test/test/raw16k ARGS > gmake-ti46.results


ti46-quick:
	rm -f gmake-ti46-quick.results
	./batchmetrics ./ti46-quick.ctl /lab/speech/sphinx4/data/ti46/ti20/test/test/raw16k ARGS > gmake-ti46-quick.results


tidigits:
	rm -f gmake-tidigits.results
	./batchmetrics ./tidigits.ctl /lab/speech/sphinx4/data/tidigits/test/raw16k ARGS > gmake-tidigits.results


tidigits-quick:
	rm -f gmake-tidigits-quick.results
	./batchmetrics ./tidigits-quick.ctl /lab/speech/sphinx4/data/tidigits/test/raw16k ARGS > gmake-tidigits-quick.results



# A simple test of 5000 randomly selected ngrams from the HUB-4 language model

lm-test:
	./lm_test ./lm_test.ARGS /lab/speech/sphinx4/data/hub4_model/language_model.arpaformat.DMP /lab/speech/sphinx4/data/hub4_model/random_ngrams.txt


# A test of 5000 trigrams, randomly generated from the HUB-4 language model
# vocabulary

lm-backoff-test:
	./lm_test ./lm_test.ARGS /lab/speech/sphinx4/data/hub4_model/language_model.arpaformat.DMP /lab/speech/sphinx4/data/hub4_model/random_trigrams.txt



# A test of a long list of ngrams. This list is generated by logging
# the ngrams queried during a run of the hub4_trigram test.

lm-utt-test:
	./lm_utt_test ./lm_test.ARGS /lab/speech/sphinx4/data/hub4_model/language_model.arpaformat.DMP /lab/speech/sphinx4/data/hub4_model/ngram.queried
