AM_CPPFLAGS = -I../liblmest -I../win32

lib_LIBRARIES = libs.a
libs_a_SOURCES = \
	ac_hash.c ac_lmfunc_impl.c ac_parsetext.c parse_line.c pc_comline.c \
	pc_message.c quit.c rd_wlist_arry.c read_voc.c read_wlist_si.c \
	rr_calloc.c rr_feof.c rr_fexists.c rr_filesize.c rr_fopen.c rr_fread.c \
	rr_fseek.c rr_fwrite.c rr_iopen.c rr_malloc.c rr_oopen.c \
	salloc.c sih.c win32compat.c
