noinst_LTLIBRARIES = libs.la
libs_la_SOURCES = \
	ac_hash.c ac_lmfunc_impl.c ac_parsetext.c parse_line.c pc_comline.c \
	pc_message.c quit.c rd_wlist_arry.c read_voc.c read_wlist_si.c \
	rr_calloc.c rr_feof.c rr_fexists.c rr_filesize.c rr_fopen.c rr_fread.c \
	rr_fseek.c rr_fwrite.c rr_iopen.c rr_malloc.c rr_oopen.c \
	salloc.c sih.c win32compat.c

pkginclude_HEADERS =				\
	ac_hash.h				\
	ac_lmfunc_impl.h			\
	ac_parsetext.h				\
	general.h				\
	mips_swap.h				\
	pc_general.h				\
	sih.h					\
	win32compat.h

INCLUDES = -I${top_srcdir}/src/liblmest -I${top_srcdir}/src/win32

