AM_CPPFLAGS = -I${top_srcdir}/src/libs -I${top_srcdir}/src/liblmest -I${top_srcdir}/src/win32
AM_LDFLAGS = -L${top_builddir}/src -L${top_builddir}/src/win32 -L${top_builddir}/src/win32
LDADD = -lSLM3

bin_PROGRAMS =	text2wfreq wfreq2vocab text2idngram idngram2lm  \
		binlm2arpa idngram2stats evallm text2wngram ngram2mgram  \
                wngram2idngram mergeidngram interpolate lm_combine 

